--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
 author: Juan Tenezaca
-title: 
+title: A Small CLI Data Gem Project
 header-img: img/home-bg.png
 email: tenj34@gmail.com
 copyright_name: Juan Tenezaca
 description: > # this means to ignore newlines until "baseurl:"
-  
+  Let's talk about this small CLI task.
 baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username: 
 github_username:  tenj34
